--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="girl">妹纸</string>
     <string name="video">视频</string>
     <string name="share">分享</string>
-    <string name="setting">设置</string>
+    <string name="set">设置</string>
     <string name="about">关于</string>
     <string name="copy">复制链接</string>
 
@@ -21,5 +21,11 @@
     <string name="share_to">分享到</string>
     <string name="copy_success">复制链接成功</string>
 
-    <string name="net_error">网络链接异常</string>
+    <string name="net_error">网络链接异常</string>splash
+
+    <string name="set_app">应用</string>
+    <string name="set_cache_summary">当前缓存大小：</string>
+    <string name="set_cache_title">清除缓存</string>
+    <string name="set_splash_summary">默认使用本地启动图，不从网络获取</string>
+    <string name="set_splash_title">启动图设置</string>
 </resources>
